[refactor] 修改认证相关代码